--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ categories = ["embedded"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rust-forth-compiler = "0.5.2"
+#rust-forth-compiler = { version = "0.5.2", features = ['enable_reflection'] }
+rust-forth-compiler = { features = ['enable_reflection'] ,path="../rust-forth-compiler"}
 rustyline = "5.0.3"
